Major additions, DAO objects, etc

--- a/config/database.properties
+++ b/config/database.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-dburl=jdbc:mysql://localhost:3306/oc
-dbname=oc
-dbuser=admin
-dbpassword=he2606
+dburl=jdbc:mysql://10.135.93.203:3306/sevmon
+dbname=sevmon
+dbuser=testuser
+dbpassword=test123
